# ProgrammingChallenges-CPP

./: CMakeLists.txt
ArithmeticAndAlgebra/A1/: PrimaryArithmetic.cpp
ArithmeticAndAlgebra/A2/: ReverseAndAdd.cpp
ArithmeticAndAlgebra/A3/: TheArcheologistsDilemma.cpp
ArithmeticAndAlgebra/A4/: Ones.cpp
Backtracking/B1/: LittleBishops.cpp
Backtracking/B2/: Board.cpp  Board.h  PuzzleProblem15.cpp
Backtracking/B3/: Queue.cpp
Backtracking/B4/: ServicingStations.cpp
Backtracking/B5/: TugOfWar.cpp
Backtracking/B7/: ColorHash.cpp
Backtracking/B8/: BiggerSquarePlease.cpp
Combinatorics/C1/: HowManyFibs.cpp
Combinatorics/C6/: ThePriestMathematician.cpp
Combinatorics/C8/: Steps.cpp
DataStructures/D1/: JollyJumpers.cpp
DataStructures/D2/: Card.h  Hand.h  PokerHands.cpp
DataStructures/D3/: Hartals.cpp
DataStructures/D4/: CryptKicker.cpp
DataStructures/D5/: StackemUp.cpp
DataStructures/D6/: ErdösNumbers.cpp
DataStructures/D7/: ContestScoreboard.cpp
DataStructures/D8/: Round.cpp  Round.h  Yahtzee1.cpp
DynamicProgramming/D1/: Elephant.cpp  Elephant.h  IsBiggerSmarter.cpp
DynamicProgramming/D2/: DistinctSubsequences.cpp
DynamicProgramming/D3/: Turtle.cpp  Turtle.h  WeightsAndMeasures.cpp
DynamicProgramming/D4/: Number.cpp  Number.h  UnidirectionalTSP.cpp
DynamicProgramming/D5/: CuttingSticks.cpp
DynamicProgramming/D6/: FerryLoading.cpp  Node.cpp  Node.h
DynamicProgramming/D7/: Chopstick.cpp  Chopstick.h  Chopsticks.cpp
GettingStarted/G1/: The3nPlus1.cpp
GettingStarted/G2/: Minesweeper.cpp
include/: Comparator.h  Pair.h  Unit.h
(+78 files in other folders)
