cmake_minimum_required(VERSION 3.17)
project(ProgrammingChallenges_CPP)
set(CMAKE_CXX_STANDARD 14)
include_directories(include)
link_directories(library)
add_executable(ProgrammingChallenges_CPP DynamicProgramming/D4/UnidirectionalTSP.cpp DynamicProgramming/D4/Number.cpp DynamicProgramming/D4/Number.h)