cmake_minimum_required(VERSION 3.17)
project(ProgrammingChallenges_CPP)
set(CMAKE_CXX_STANDARD 14)
include_directories(include)
add_executable(ProgrammingChallenges_CPP GraphAlgorithms/G4/Railroads.cpp GraphAlgorithms/G4/Roads.h GraphAlgorithms/G4/Roads.cpp GraphAlgorithms/G4/Road.h GraphAlgorithms/G4/Road.cpp)